# modern-cmake-examples

extended-project/: CMakeLists.txt
extended-project/apps/: CMakeLists.txt
extended-project/apps/binary-test/: CMakeLists.txt  Lib1.cpp  Lib1.h  main.cpp
extended-project/apps/car-autonomy/: CMakeLists.txt  main.cpp
extended-project/apps/school-grades/: CMakeLists.txt  main.cpp
extended-project/libs/: CMakeLists.txt
extended-project/libs/logging-lib/: CMakeLists.txt  Logging.cpp  Logging.h
extended-project/libs/safe-math/: CMakeLists.txt  SafeMath.cpp  SafeMath.h
more-extended-project/: CMakeLists.txt
more-extended-project/apps/: CMakeLists.txt
more-extended-project/apps/first-executable/: CMakeLists.txt  main.cpp
more-extended-project/libs/: CMakeLists.txt
more-extended-project/libs/first-library/: CMakeLists.txt
more-extended-project/libs/second-library/: CMakeLists.txt
more-extended-project/libs/second-library/first-module/: CMakeLists.txt
more-extended-project/libs/second-library/first-module/include/FirstModule/: FirstModule.h
more-extended-project/libs/second-library/first-module/src/: FirstModule.cpp
more-extended-project/libs/second-library/second-module/: CMakeLists.txt
more-extended-project/libs/second-library/second-module/include/FirstModule/: SecondModule.h
more-extended-project/libs/second-library/second-module/src/: SecondModule.cpp
simple-project/: CMakeLists.txt
simple-project/apps/: CMakeLists.txt  simple_executable.cpp
simple-project/libs/: CMakeLists.txt
simple-project/libs/simple-library/: CMakeLists.txt  (+2 more)
(+2 files in other folders)
